--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-intl": "^5.15.7",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "axios": "^0.21.1"
   },
   "peerDependencies": {
     "react-horizontal-scrolling-menu": "^0.7.10"
