--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.4.0",
     "@jp-olvera/jp-viaducto-components": "^1.0.20",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-horizontal-scrolling-menu": "^0.7.10",
     "react-intl": "^5.15.7",
-    "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1",
     "axios": "^0.21.1"
@@ -20,11 +16,30 @@
   "peerDependencies": {
     "react-horizontal-scrolling-menu": "^0.7.10"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "1.12.0",
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.13.1",
+    "@babel/eslint-parser": "^7.12.16",
+    "@babel/node": "^7.12.16",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "mini-svg-data-uri": "1.2.3",
+    "url-loader": "4.1.1",
+    "css-loader": "^5.0.2",
+    "style-loader": "^2.0.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "webpack --mode production --config config/webpack.config.js --progress"
   },
   "eslintConfig": {
     "extends": [
