--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   },
   "devDependencies": {
     "cypress": "^7.0.1",
-    "dotenv": "^8.2.0"
+    "cypress-localstorage-commands": "^1.4.3",
+    "dotenv": "^8.2.0",
+    "jwt-decode": "^3.1.2"
   }
 }
