--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "@jp-olvera/test-login-component",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "dependencies": {
     "@auth0/auth0-react": "^1.4.0",
     "@jp-olvera/jp-viaducto-components": "^1.0.20",
     "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-horizontal-scrolling-menu": "^0.7.10",
-    "react-intl": "^5.15.7",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.2.3",
-    "web-vitals": "^1.1.1"
+    "react-intl": "^5.15.7"
   },
   "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.3",
     "react-horizontal-scrolling-menu": "^0.7.10"
   },
   "repository": {
@@ -24,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "SET NODE_ENV=production && npx babel src --out-dir dist --copy-files",
+    "build": "webpack --mode production --config config/webpack.config.js --progress",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cy": "./node_modules/.bin/cypress open",
@@ -50,20 +47,31 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.16",
+    "@babel/core": "^7.13.1",
+    "@babel/eslint-parser": "^7.12.16",
+    "@babel/node": "^7.12.16",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@cucumber/cucumber": "^7.1.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.2",
     "cypress": "^7.0.1",
     "cypress-localstorage-commands": "^1.4.3",
     "dotenv": "^8.2.0",
-    "jwt-decode": "^3.1.2"
-  }
+    "jwt-decode": "^3.1.2",
+    "react-scripts": "4.0.3",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
+  },
+  "files": [
+    "dist"
+  ]
 }
